# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
page_loader/scripts/: page_loader.py
tests/: test_scripts_page_loader.py
