[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web-page loader"
authors = ["Dmitry Chmerenko <dchmerenko@gmail.com>"]
license = "Beerware"
packages = [
	{ include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
